Hot fixes to accessories. Image, when edit still unavailable

--- a/TeslaRent_Server/appsettings.json
+++ b/TeslaRent_Server/appsettings.json
@@ -1,7 +1,7 @@
 {
   // 8. Добавляем строку подключения
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TeslaRent;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TeslaRentNew;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
 
   "Logging": {
