--- a/TeslaRent_Server/Properties/launchSettings.json
+++ b/TeslaRent_Server/Properties/launchSettings.json
@@ -10,12 +10,12 @@
   "profiles": {
     "TeslaRent_Server": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7244;http://localhost:5244",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:7244;http://localhost:5244",
+      "dotnetRunMessages": true
     },
     "IIS Express": {
       "commandName": "IISExpress",
