Authorization and registration implemented in API service. Cors is configured and swagger can use bearer tokens

--- a/TeslaCar_API/appsettings.json
+++ b/TeslaCar_API/appsettings.json
@@ -8,5 +8,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  // 134. Перейти в AppSettings.json проекта TeslaCar_API и добавить необходимые данные
+  "APISettings": {
+    "SecretKey": "[W),}y&Y6Jr|'ii@-F~r'kteN&J!#~e@9T]k1}6\"Lu$w*-mcQ{l]0*Gi#u+V;o_",
+    // Назначаем единственный адрес для обработки API запросов
+    // Для получения адреса, переходим в Properties проекта API -> Debug -> App URL
+    // При публикации на реальном сервере не забыть заменить на имя реального домена
+    "ValidAudience": "https://localhost:7083",
+    "ValidIssuer": "https://localhost:7083"
+  }
 }
