--- a/TeslaCar_API/appsettings.json
+++ b/TeslaCar_API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TeslaRentNew;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\kolya\\TeslaRentNew.mdf;Integrated Security=True;Connect Timeout=30"
   },
   "Logging": {
     "LogLevel": {
