--- a/TeslaRent_Server/appsettings.json
+++ b/TeslaRent_Server/appsettings.json
@@ -1,7 +1,7 @@
 {
   // 8. Добавляем строку подключения
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TeslaRentNew;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\kolya\\TeslaRentNew.mdf;Integrated Security=True;Connect Timeout=30"
   },
 
   "Logging": {
