--- a/TeslaRent_Server/appsettings.json
+++ b/TeslaRent_Server/appsettings.json
@@ -1,7 +1,8 @@
 {
   // 8. Добавляем строку подключения
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\kolya\\TeslaRentNew.mdf;Integrated Security=True;Connect Timeout=30"
+    //"DefaultConnection": "Server=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\kolya\\TeslaRentNew.mdf;Integrated Security=True;Connect Timeout=30"
+    "DefaultConnection": "Data Source=SQL5107.site4now.net;Initial Catalog=db_a8446a_testusertesla;User Id=db_a8446a_testusertesla_admin;Password=Kolyan2008"
   },
 
   "Logging": {
