--- a/TeslaRent_Client/wwwroot/appsettings.json
+++ b/TeslaRent_Client/wwwroot/appsettings.json
@@ -1,5 +1,5 @@
-// 168.1 Создать в проекте TeslaRent_Client новый Item типа App Settings File
-// --> Далее, заменяем в классе Program TeslaRent_Client проекта базовый URL API
+// 168.1 пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ TeslaRent_Client пїЅпїЅпїЅпїЅпїЅ Item пїЅпїЅпїЅпїЅ App Settings File
+// --> пїЅпїЅпїЅпїЅпїЅ, пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅ пїЅпїЅпїЅпїЅпїЅпїЅ Program TeslaRent_Client пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ URL API
 {
   "BaseAPIUrl": "https://localhost:7083"
 
