--- a/TeslaCar_API/appsettings.json
+++ b/TeslaCar_API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\kolya\\TeslaRentNew.mdf;Integrated Security=True;Connect Timeout=30"
+    "DefaultConnection": "Server=(LocalDB)\\your_path_to_db_file;Integrated Security=True;Connect Timeout=30"
   },
   "Logging": {
     "LogLevel": {
@@ -22,8 +22,8 @@
   "TeslaCar_Client_URL": "https://localhost:44317",
   // 247. 
   "MailJetSettings": {
-    "PublicKey": "05ff77166e0c420dc8b13db76ba1cc80",
-    "SecretKey": "1eacf8832b4dcd20a9a1093c8f437385",
-    "Email": "masterprogger87@gmail.com"
+    "PublicKey": "your_public_key",
+    "SecretKey": "your_secret_key",
+    "Email": "your_email_address"
   }
 }
